@@ -1,5 +1,11 @@
 2006-12-11  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/png.c: reset to factory defaults instead of
+	popping up a warning dialog when the user clicks "Load Defaults"
+	and hasn't saved default values yet (bug #384673).
+
+2006-12-11  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/tool-options-commands.c
 	* app/core/gimptoolpresets.[ch]
 	* app/tools/gimp-tools.c: code cleanup.
